--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.1.0",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
